2002-11-22  Gregory John Casamento  <greg_casamento@yahoo.com>

	* GormDocument.[hm]: added -[GormDocument removeConnectionsWithLabel: 
	(NSString *)name forClassNamed: (NSString *)className
	isAction: (BOOL)action.  This method removes the connections relavent
	to an action/outlet when it's name is changed.  I also modified the
	delegate to call it and to present the user w/ an alert panel.  This
	is consistent w/ how InterfaceBuilder behaves.
	
2002-11-20  Adam Fedor  <fedor@gnu.org>

	* GModelDecoder.m
	([GormObjectProxy -initWithModelUnarchiver:]): Retain the className.
	([GormDocument -defineClass:inFile:]): New.
	([GormDocument -openGModel:]): Define custom classes, setup
	connection objects appropriatly.
	* GormClassManager.m (-isKnownClass:): New.

	* GormFilesOwner.m ([GormFilesOwnerInspector -dealloc]): Don't
	release superclass ivar window.

2002-11-19  Gregory John Casamento <greg_casamento@yahoo.com>

	* ClassInformation.plist: Added entry for NSOpenGLView.

2002-11-19  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* GormObjectEditor.m ([GormObjectEditor +setEditor:forDocument:]): 
	replaced self with editor. There was an exception when instancing
	any class.

2002-11-19  Gregory John Casamento  <greg_casamento@yahoo.com>

	* Gorm.m: Added key equivalents for operations in the Classes
	menu.
	
2002-11-18  Pierre-Yves Rivaille  <pyrivail@ens-lyon.fr>
 
	* GNUMakefile: added GormViewSizeInspector.m, GormGenericEditor.m
	and GormImageEditor.m.
	* GormGenericEditor.m: new abstract superclass of GormObjectEditor, 
	GormImageEditor and GormSoundEditor.
	* GormImageEditor.m: new class to deal with Images.
	* GormSoundEditor.m: refactored code with GormGenericEditor,
	now looks like GormImageEditor.m
	* GomCustomClassInspector.m: rewrote parts to stop using notification
	and use changeObject: method instead.
	* Gorm.m, Gorm.h, GormPrivate.h, GormDocument.h, GormDocument.m:
	changes to accomodate new Image & Sound code.